portfolio: fixed overflow in hover

--- a/css/base.css
+++ b/css/base.css
@@ -219,6 +219,7 @@ h1 {
    float: left;
    position: relative;
    text-align: center;
+   overflow: hidden;
 }
 
 .view-first:hover .mask {
@@ -229,7 +230,7 @@ h1 {
    height: 100%;
 }
 
-.view .mask .view .content {
+.view .mask {
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -339,6 +340,14 @@ h1 {
 .view img {
     display: block;
     position: relative;
+}
+
+.view-first img {
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    transition: all 0.2s linear;
 }
 
 .our__team__gallery {
